fix right shift problem of buttons to the left

--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -184,7 +184,7 @@ pre code {
 @media screen and (max-width: 768px) {
   .post-container ul,
   .post-container ol {
-    padding-left: 30px;
+    /*padding-left: 30px;*/
   }
 }
 @media screen and (max-width: 500px) {
